--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,4 +63,17 @@
         app:layout_constraintTop_toBottomOf="@+id/listView"
         app:layout_constraintVertical_bias="0.476" />
 
+    <Button
+        android:id="@+id/bKayitlar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="172dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="9dp"
+        android:text="Kayıtlar"
+        app:layout_constraintBottom_toBottomOf="@+id/bGeri"
+        app:layout_constraintEnd_toStartOf="@+id/bGeri"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
