--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -33,7 +33,11 @@
             android:layout_height="wrap_content"
             android:id="@+id/next"
             android:text="Gönder"/>
-
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sil"
+            android:text="Sil"/>
 
     </LinearLayout>
 
