--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,93 +1,26 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.olcayergun.btAracTespit.MainActivity">
 
     <TextView
         android:id="@+id/tv1"
-        android:layout_width="346dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginBottom="1dp"
-        android:text="@string/tv1"
-        app:layout_constraintBottom_toTopOf="@+id/tv2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/tv1" />
 
     <TextView
         android:id="@+id/tv2"
-        android:layout_width="343dp"
-        android:layout_height="36dp"
-        android:text="@string/tv2"
-        app:layout_constraintBottom_toTopOf="@+id/listView"
-        app:layout_constraintStart_toStartOf="@+id/tv1" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/tv2" />
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="349dp"
-        android:layout_height="376dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="64dp"
-        android:background="?attr/colorButtonNormal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.662"
-        tools:layout_conversion_wrapHeight="1920"
-        tools:layout_conversion_wrapWidth="1080">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-    </ListView>
-
-    <Button
-        android:id="@+id/bGeri"
-        android:layout_width="120dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="288dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/geri"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.862"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listView"
-        app:layout_constraintVertical_bias="0.476" />
-
-    <Button
-        android:id="@+id/bKayitlar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="172dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginEnd="9dp"
-        android:text="Kayıtlar"
-        app:layout_constraintBottom_toBottomOf="@+id/bGeri"
-        app:layout_constraintEnd_toStartOf="@+id/bGeri"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listView" />
-
-    <Button
-        android:id="@+id/bGüncelle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="54dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="48dp"
-        android:text="GÜNCELLE"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bKayitlar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listView" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
