--- a/app/src/main/res/menu/listmenu.xml
+++ b/app/src/main/res/menu/listmenu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menuSelect"
+        android:id="@+id/menuSettings"
         android:title="@string/HEPSINI_SEC"
         app:showAsAction="never" />
     <item
