--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <EditTextPreference android:title="Ana URL:"
+    <EditTextPreference
+        android:title="Ana URL:"
         android:key="mainUrl"
-        android:summary="Bilgilerin alınacağı URL giriniz."></EditTextPreference>
-    <CheckBoxPreference android:title="BlueTooth cihaz adlarını kullanmı?"
+        android:defaultValue="http://www.olcayergun.com/urller.html"
+        android:summary="Bilgilerin alınacağı URL giriniz." />
+    <CheckBoxPreference android:title="BlueTooth cihaz adları da kullanılsın mı??"
         android:defaultValue="false"
-        android:summary="Bluetooth cihazlarının adlandırılmasında 'MAC Adresi' yerine 'Cihaz Adı' kulanılır."
+        android:summary="Bluetooth cihazlarının adlandırılmasında 'MAC Adresi' beraber \n'Cihaz Adı' de kulanılır."
         android:key="bBTNameUse" />
 </PreferenceScreen>
